@@ -19,29 +19,29 @@ import me.szumielxd.portfel.common.Lang.LangKey;
 import me.szumielxd.portfel.common.utils.MiscUtils;
 import net.kyori.adventure.text.Component;
 
-public abstract class ParentCommand extends SimpleCommand {
+public abstract class ParentCommand<C> extends SimpleCommand<C> {
 
 	
-	private HashMap<String, SimpleCommand> childrens;
+	private HashMap<String, SimpleCommand<C>> childrens;
 	
 	
-	public ParentCommand(@NotNull Portfel plugin, @NotNull AbstractCommand parent, @NotNull String name, @NotNull String... aliases) {
+	protected ParentCommand(@NotNull Portfel<C> plugin, @NotNull AbstractCommand<C> parent, @NotNull String name, @NotNull String... aliases) {
 		super(plugin, parent, name, aliases);
 	}
 	
-	protected void register(@NotNull SimpleCommand... childrens) {
-		HashMap<String, SimpleCommand> childs = new HashMap<>();
-		for (final SimpleCommand cmd : childrens) {
+	protected void register(@NotNull SimpleCommand<C>[] childrens) {
+		HashMap<String, SimpleCommand<C>> childs = new HashMap<>();
+		for (final SimpleCommand<C> cmd : childrens) {
 			childs.putIfAbsent(cmd.getName().toLowerCase(), cmd);
 		}
-		for (final SimpleCommand cmd : childrens) {
+		for (final SimpleCommand<C> cmd : childrens) {
 			Arrays.asList(cmd.getAliases()).forEach(str -> childs.putIfAbsent(str.toLowerCase(), cmd));
 		}
 		this.childrens = childs;
 	}
 
 	@Override
-	public void onCommand(@NotNull CommonSender sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
+	public void onCommand(@NotNull CommonSender<C> sender, @NotNull Object[] parsedArgs, @NotNull String[] label, @NotNull String[] args) {
 		final List<CmdArg> cmdArgs = this.getArgs();
 		int offset = 0;
 		Object[] newParsedArgs = new Object[0];
@@ -51,7 +51,7 @@ public abstract class ParentCommand extends SimpleCommand {
 				if (obj != null) {
 					offset++;
 				} else if (!arg.isOptional()) {
-					Component comp = Portfel.PREFIX.append(arg.getArgError(Component.text(args[offset], DARK_RED)));
+					Component comp = MiscUtils.PREFIX.append(arg.getArgError(Component.text(args[offset], DARK_RED)));
 					sender.sendTranslated(comp);
 					return;
 				}
@@ -59,13 +59,13 @@ public abstract class ParentCommand extends SimpleCommand {
 			}
 		}
 		if (args.length > offset) {
-			SimpleCommand cmd = this.childrens.get(args[offset].toLowerCase());
+			SimpleCommand<C> cmd = this.childrens.get(args[offset].toLowerCase());
 			if (cmd != null) {
 				if (!cmd.hasPermission(sender)) {
-					sender.sendMessage(Portfel.PREFIX.append(LangKey.ERROR_COMMAND_PERMISSION.component(RED)));
+					sender.sendMessage(MiscUtils.PREFIX.append(LangKey.ERROR_COMMAND_PERMISSION.component(RED)));
 					return;
 				} else if (!cmd.getAccess().canAccess(sender)) {
-					sender.sendMessage(Portfel.PREFIX.append(cmd.getAccess().getAccessMessage().component(RED)));
+					sender.sendMessage(MiscUtils.PREFIX.append(cmd.getAccess().getAccessMessage().component(RED)));
 					return;
 				}
 				cmd.onCommand(sender, MiscUtils.mergeArrays(parsedArgs, newParsedArgs), MiscUtils.mergeArrays(label, Arrays.copyOf(args, ++offset)), MiscUtils.popArray(args, offset));
@@ -93,7 +93,7 @@ public abstract class ParentCommand extends SimpleCommand {
 			}
 		}
 		Lang lang = Lang.get(sender);
-		Component comp = Portfel.PREFIX.append(LangKey.COMMAND_SUBCOMMANDS_TITLE
+		Component comp = MiscUtils.PREFIX.append(LangKey.COMMAND_SUBCOMMANDS_TITLE
 				.component(LIGHT_PURPLE,Component.text(label[label.length-1], LIGHT_PURPLE)))
 				.append(Component.text(" (/", GRAY).children(MiscUtils.join(" ", fullLabel).children()).append(Component.text("...)")));
 		sender.sendTranslated(comp);
@@ -103,28 +103,33 @@ public abstract class ParentCommand extends SimpleCommand {
 			Component line = linePrefix.append(Component.text(cmd.getName(), AQUA)).append(Component.text(cmd.getArgs().isEmpty()? "" : " - ", DARK_PURPLE))
 					.append(MiscUtils.join(" ", cmd.getArgs().stream().map(MiscUtils::argToComponent).toArray(Component[]::new)));
 			String cmdUsage = "/" + String.join(" ", suggestCmd) + " " + cmd.getName() + String.join(" ", cmd.getArgs().stream()
-					.map(arg -> MiscUtils.argToCleanText(lang, arg)).toArray(String[]::new));
+					.map(arg -> MiscUtils.argToCleanText(lang, arg))
+					.toArray(String[]::new));
 			sender.sendTranslated(MiscUtils.buildCommandUsage(line, cmdUsage, cmd));
 		});
 		
 	}
 
 	@Override
-	public @NotNull List<String> onTabComplete(@NotNull CommonSender sender, @NotNull String[] label, @NotNull String[] args) {
+	public @NotNull List<String> onTabComplete(@NotNull CommonSender<C> sender, @NotNull String[] label, @NotNull String[] args) {
 		List<CmdArg> subCmds = this.getArgs();
 		String lastArg = args[args.length-1].toLowerCase();
 		if (subCmds.size() >= args.length) {
-			return subCmds.get(args.length-1).getTabCompletions(sender).stream().filter(s -> s.toLowerCase().startsWith(lastArg)).collect(Collectors.toList());
+			return subCmds.get(args.length-1).getTabCompletions(sender).stream()
+					.filter(s -> s.toLowerCase().startsWith(lastArg))
+					.toList();
 		} else if (args.length == subCmds.size() + 1) {
 			List<String> list = new ArrayList<>();
 			this.childrens.forEach((name, cmd) -> {
-				if (cmd.hasPermission(sender) && cmd.getAccess().canAccess(sender) && name.toLowerCase().startsWith(lastArg)) list.add(name);
+				if (cmd.hasPermission(sender) && cmd.getAccess().canAccess(sender) && name.toLowerCase().startsWith(lastArg)) {
+					list.add(name);
+				}
 			});
 			list.sort(String.CASE_INSENSITIVE_ORDER);
 			return list;
 		} else {
 			String str = args[subCmds.size()];
-			SimpleCommand cmd = this.childrens.get(str.toLowerCase());
+			SimpleCommand<C> cmd = this.childrens.get(str.toLowerCase());
 			if (cmd != null && cmd.hasPermission(sender) && cmd.getAccess().canAccess(sender)) {
 				return cmd.onTabComplete(sender, MiscUtils.mergeArrays(label, Arrays.copyOf(args, subCmds.size()+1)), MiscUtils.popArray(args, subCmds.size()+1));
 			}
@@ -132,8 +137,10 @@ public abstract class ParentCommand extends SimpleCommand {
 		return new ArrayList<>();
 	}
 	
-	public @NotNull Collection<SimpleCommand> getChildrens() {
-		return this.childrens.values().stream().distinct().collect(Collectors.toList());
+	public @NotNull Collection<SimpleCommand<C>> getChildrens() {
+		return this.childrens.values().stream()
+				.distinct()
+				.toList();
 	}
 	
 
